--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-    <ul>
-        <li><a href="#">Trang chủ</a></li>
-    <li><a href="/create">Giới thiệu</a></li>
-    </ul>
-<!-- <h1>The fieldset element</h1>
+    <li><a href="#">Trang chủ</a></li>
+    <li><a href="#">Giới thiệu</a></li>
+<h1>The fieldset element</h1>
 
 <form action="/create_user" method="post">
  <fieldset>
@@ -19,7 +16,7 @@
   <input type="text" id="address" name="address"><br><br>
   <input type="submit" value="Submit">
  </fieldset>
-</form> -->
+</form>
 
 </body>
 </html>
