--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,6 +6,26 @@
         <li><a href="#">Trang chủ</a></li>
     <li><a href="/create">Giới thiệu</a></li>
     </ul>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Teen</th>
+            <th scope="col">Email</th>
+            <th scope="col">City</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+         
+     
+        </tbody>
+      </table>
 <!-- <h1>The fieldset element</h1>
 
 <form action="/create_user" method="post">
